--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="./index.js" async></script>
-    <!-- <script src="./example.js" async></script> -->
+    <script src="./inMemorySearchEngine.js" async></script>
 </head>
 <body>
     <h1>Hello javascript</h1>
