--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="./index.js" async></script>
-    <script src="./inMemorySearchEngine.js" async></script>
+    <!-- <script src="./index.js" async></script>
+    <script src="./inMemorySearchEngine.js" async></script> -->
+    <!-- <script src="./throttle1.js" async></script> -->
+    <script src="./fetchWithTimeout.js" async></script>
 </head>
 <body>
     <h1>Hello javascript</h1>
