--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <!-- <script src="./index.js" async></script>
     <script src="./inMemorySearchEngine.js" async></script> -->
     <!-- <script src="./throttle1.js" async></script> -->
-    <script src="./fetchWithTimeout.js" async></script>
+    <!-- <script src="./fetchWithTimeout.js" async></script>
+    <script src="./analyticsSDK.js"></script> -->
+    <!-- <script src="./test.js"></script> -->
+    <script src="./cacheApiWithExpiryTime.js" async></script>
 </head>
 <body>
     <h1>Hello javascript</h1>
